// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/unified-share-modal/SharedLinkAccessMenu render() should render correct menu 1`] = `
<DropdownMenu
  constrainToScrollParent={false}
  constrainToWindow={false}
  isRightAligned={false}
>
  <PlainButton
    className="lnk is-disabled"
    disabled={true}
  >
    <MenuToggle>
      <SharedLinkAccessLabel
        accessLevel="peopleWithTheLink"
        enterpriseName="Box"
        hasDescription={false}
        itemType="folder"
      />
    </MenuToggle>
  </PlainButton>
  <Menu
    className="usm-share-access-menu"
    isHidden={false}
    isSubmenu={false}
  >
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      key="tooltip-peopleWithTheLink"
      position="top-center"
      text={
        <FormattedMessage
          defaultMessage="This option isn’t available for this item due to a security restriction or classification."
          id="boxui.unifiedShare.disabledShareLinkPermission"
          values={
            Object {
              "classification": "Internal",
            }
          }
        />
      }
      theme="default"
    >
      <SelectMenuItem
        isDisabled={true}
        isSelected={true}
        key="peopleWithTheLink"
        onClick={[Function]}
      >
        <SharedLinkAccessLabel
          accessLevel="peopleWithTheLink"
          enterpriseName="Box"
          hasDescription={true}
          itemType="folder"
        />
      </SelectMenuItem>
    </Tooltip>
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      key="tooltip-peopleInYourCompany"
      position="top-center"
      text={
        <FormattedMessage
          defaultMessage="This option isn’t available for this item due to a security restriction or classification."
          id="boxui.unifiedShare.disabledShareLinkPermission"
          values={
            Object {
              "classification": "Internal",
            }
          }
        />
      }
      theme="default"
    >
      <SelectMenuItem
        isDisabled={true}
        isSelected={false}
        key="peopleInYourCompany"
        onClick={[Function]}
      >
        <SharedLinkAccessLabel
          accessLevel="peopleInYourCompany"
          enterpriseName="Box"
          hasDescription={true}
          itemType="folder"
        />
      </SelectMenuItem>
    </Tooltip>
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      key="tooltip-peopleInThisItem"
      position="top-center"
      text={
        <FormattedMessage
          defaultMessage="This option isn’t available for this item due to a security restriction or classification."
          id="boxui.unifiedShare.disabledShareLinkPermission"
          values={
            Object {
              "classification": "Internal",
            }
          }
        />
      }
      theme="default"
    >
      <SelectMenuItem
        isDisabled={true}
        isSelected={false}
        key="peopleInThisItem"
        onClick={[Function]}
      >
        <SharedLinkAccessLabel
          accessLevel="peopleInThisItem"
          enterpriseName="Box"
          hasDescription={true}
          itemType="folder"
        />
      </SelectMenuItem>
    </Tooltip>
  </Menu>
</DropdownMenu>
`;

exports[`features/unified-share-modal/SharedLinkAccessMenu render() should render correct menu 2`] = `
<DropdownMenu
  constrainToScrollParent={false}
  constrainToWindow={false}
  isRightAligned={false}
>
  <PlainButton
    className="lnk"
    disabled={false}
  >
    <MenuToggle>
      <SharedLinkAccessLabel
        accessLevel="peopleWithTheLink"
        enterpriseName="Box"
        hasDescription={false}
        itemType="folder"
      />
    </MenuToggle>
  </PlainButton>
  <Menu
    className="usm-share-access-menu"
    isHidden={false}
    isSubmenu={false}
  >
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      key="tooltip-peopleWithTheLink"
      position="top-center"
      text={
        <FormattedMessage
          defaultMessage="This option isn’t available for this item due to a security restriction or classification."
          id="boxui.unifiedShare.disabledShareLinkPermission"
          values={
            Object {
              "classification": "Internal",
            }
          }
        />
      }
      theme="default"
    >
      <SelectMenuItem
        isDisabled={true}
        isSelected={true}
        key="peopleWithTheLink"
        onClick={[Function]}
      >
        <SharedLinkAccessLabel
          accessLevel="peopleWithTheLink"
          enterpriseName="Box"
          hasDescription={true}
          itemType="folder"
        />
      </SelectMenuItem>
    </Tooltip>
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      key="tooltip-peopleInYourCompany"
      position="top-center"
      text={
        <FormattedMessage
          defaultMessage="This option isn’t available for this item due to a security restriction or classification."
          id="boxui.unifiedShare.disabledShareLinkPermission"
          values={
            Object {
              "classification": "Internal",
            }
          }
        />
      }
      theme="default"
    >
      <SelectMenuItem
        isDisabled={true}
        isSelected={false}
        key="peopleInYourCompany"
        onClick={[Function]}
      >
        <SharedLinkAccessLabel
          accessLevel="peopleInYourCompany"
          enterpriseName="Box"
          hasDescription={true}
          itemType="folder"
        />
      </SelectMenuItem>
    </Tooltip>
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      key="tooltip-peopleInThisItem"
      position="top-center"
      text={
        <FormattedMessage
          defaultMessage="This option isn’t available for this item due to a security restriction or classification."
          id="boxui.unifiedShare.disabledShareLinkPermission"
          values={
            Object {
              "classification": "Internal",
            }
          }
        />
      }
      theme="default"
    >
      <SelectMenuItem
        isDisabled={true}
        isSelected={false}
        key="peopleInThisItem"
        onClick={[Function]}
      >
        <SharedLinkAccessLabel
          accessLevel="peopleInThisItem"
          enterpriseName="Box"
          hasDescription={true}
          itemType="folder"
        />
      </SelectMenuItem>
    </Tooltip>
  </Menu>
</DropdownMenu>
`;
